internal/xds/translator/testdata/out/xds-ir/jsonpatch-with-jsonpath-invalid.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        headers:
        - name: user
          stringMatch:
            exact: james
        - name: country
          stringMatch:
            exact: US
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
